Fixed spacing between the static activity cards

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -628,3 +628,7 @@ a:hover {
 .overlap {
   z-index: 1000;
 }
+
+.static-card-width{
+  width: 250px;
+}
